# yuntun

./: .gitignore  README.md  main.py  pyproject.toml
configs/: dev.json  prod.json  train.json
scripts/: eval.sh  launch.sh  run_tp_test.py  train.py  verify_architecture.py  verify_qwen3_impl.py
src/: config.py  qwen3.py  train.py
src/distributed/: __init__.py  fsdp_utils.py  groups.py  parallel.py  tensor_parallel.py
src/model/: model_parallel_lm.py  pipeline_utils.py  qwen_wrapper.py  tensor_parallel.py
src/models/qwen3/: __init__.py  config.py  model.py
src/rl/: generation.py  grpo.py  reward_fn.py
src/utils/: tokenizer.py
src/yuntun/: __init__.py  trainer.py
src/yuntun/data/: __init__.py  fineweb.py
src/yuntun/distributed/: __init__.py  parallel.py  tensor_parallel.py
src/yuntun/model/: __init__.py  config.py  layers.py  loading.py  model.py  utils.py
