[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yuntun"]

[project]
name = "yuntun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.10.0",
    "transformers>=5.0.0",
    "datasets>=3.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
